# twitch-stoat

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
src/: config.rs  db.rs  error.rs  events.rs  main.rs  state.rs
src/commands/: addstream.rs  helpstream.rs  liststreams.rs  mod.rs  removestream.rs
src/twitch/: eventsub.rs  mod.rs  subscription.rs  types.rs  validation.rs
